fixed spacing

--- a/style.css
+++ b/style.css
@@ -251,6 +251,8 @@ nav ul a:hover {
     margin: 5rem auto;
     color: #fff;
     background: url(./img/Rectangle\ 9.png);
+    background-position: center;
+    background-size: cover;
     width: 100%;
     padding: 4rem 0;
 }
